数据更新到剑极狼版本

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>mho半自动配装器</title>
+<title>mho半自动配装器——剑极狼版本</title>
 <!-- Place favicon.ico in the root directory -->
 
 
@@ -102,7 +102,7 @@
 			{{info}}
 		</div>
 		<div class="content" ms-if="popup == 'before_loading'">
-			当前版本为轰龙套数据修复版本，初次载入或重新读取数据会载入2m多的数据文件，建议不要在移动环境载入，避免燃烧流量<br>
+			当前版本为剑极狼版本，初次载入或重新读取数据会载入2m多的数据文件，建议不要在移动环境载入，避免燃烧流量<br>
 			<a class="btn" href="javascript:;" ms-click="load">确定载入</a>
 		</div>
 	</div>
