--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <script src="scripts/vendor.c249c5ea.js"></script>
 
-<script src="scripts/main.1fa4ad48.js"></script>
+<script src="scripts/main.afb89bba.js"></script>
 </head>
 <body ms-controller="mho" ms-class="onPopup:popup!=''">
 <!--[if lt IE 10]>
@@ -35,7 +35,7 @@
 			<a ms-repeat-skill="skill" class="skill btn" href="javascript:;" ms-click="addSkill(skill)">{{skill.n}}</a>
 		</div>
 		<div class="content" ms-if="popup == 'armor_choose'">
-			<a ms-repeat-armor="optionalArmor" class="armor btn" href="javascript:;" ms-click="addArmor($index)"><header>{{armor.n}}</header>：{{skillJoin(armor.s)}}</a>
+			<a ms-repeat-armor="optionalArmor" class="armor btn" href="javascript:;" ms-click="addArmor($index)"><header>{{armor.n}}（{{armor.h}}）</header>：{{skillJoin(armor.s)}}</a>
 		</div>
 		<div class="content" ms-if="popup == 'loading'">
 			{{info}}
